# Python

./: MANIFEST.in  main.py  pyproject.toml  setup.py
EC0/: Eq6_1.py  Eq6_2.py  Eq6_3.py  Eq8_1.py  Eq8_10.py  Eq8_2.py  Glossary.py  __init__.py  definitions.csv
EC0/UnitTests/: UT_Eq6_1.py  UT_Eq8_10.py
Settings/: DesignEquation.py  DesignFactor.py  DesignValue.py  UnitConversion.py  __init__.py  forceUnits.csv  lengthUnits.csv
